# machine-learning-zoomcamp

./: .gitignore  README.md  clothing_pytorch.ipynb
01-intro/: hw1.ipynb
02-regression/: hw2.ipynb
03-classification/: hw3.ipynb
04-evaluation/: hw4.ipynb
05-deployment/: .dockerignore  Dockerfile  fly.toml  hw5.ipynb  lead_scoring.py  predict.py  pyproject.toml
05-deployment/05_deployment.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
06-trees/: hw06.ipynb
08-deep-learning/: Untitled.ipynb  hw08.ipynb  main.py  pyproject.toml
09-serverless/: deploy.sh  invoke_lambda.py  lambda_function.py  pyproject.toml  test.py
09-serverless/09-hw/: 09-hw.ipynb  Dockerfile  deploy.sh  lambda_function.py  test.py
