[project]
name = "05-deployment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.120.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "requests>=2.32.5",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.38.0",
    "wget>=3.2",
]
